<resources>
    <string name="app_name">TicTacToe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Логин</string>
    <string name="pass">Пароль</string>
    <string name="pass_repeat">Повторите пароль</string>
    <string name="sign_in">Войти</string>
    <string name="to_sign_up">Регистрация</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="back">Назад</string>
    <string name="exit">Выйти</string>
    <string name="game">Играть</string>
    <string name="game_with_friends">С другом</string>
    <string name="game_online">Онлайн</string>
    <string name="game_with_bot">С ботом</string>
    <string name="rating">Рейтинг</string>
    <string name="settings">Настройки</string>
    <string name="user_name">Игрок</string>
    <string name="score">Счет</string>
    <string name="error_login_password">Логин или пароль не введен</string>
    <string name="passwords_do_not_match">Пароли не совпадают</string>
    <string name="who_turn">Ваш ход</string>
    <string name="ready">Я готов!</string>
    <string name="create_server">Создать комнату</string>
    <string name="connect">Подключиться к комнате</string>
    <string name="enter_ip">Введите IP</string>
    <string name="load_avatar">Загрузить аватар</string>
    <string name="your_avatar">Ваш аватар</string>

</resources>