<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentMenu"
    android:orientation="vertical"
    android:background="@color/game_background_color">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/game_navigation_bar_color"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Display1"
        app:titleTextColor="@color/button_color" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="16dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/button_color"
        android:src="@drawable/ic_settings"
        android:tint="@color/white"
        android:contentDescription="@string/settings" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="110dp"
        android:layout_marginTop="30dp"
        android:text="@string/game"
        android:textAppearance="@style/TextAppearance.Material3.DisplayLarge"
        android:textColor="@color/button_color"/>


    <Button
        android:id="@+id/btnOnline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="83dp"
        android:layout_marginTop="20dp"
        android:text="@string/game_online"
        android:backgroundTint="@color/button_color"/>

    <Button
        android:id="@+id/btnWithFriend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="83dp"
        android:layout_marginTop="10dp"
        android:text="@string/game_with_friends"
        android:backgroundTint="@color/button_color"/>

    <Button
        android:id="@+id/btnWithBot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="83dp"
        android:layout_marginTop="10dp"
        android:text="@string/game_with_bot"
        android:backgroundTint="@color/button_color"/>

    <Button
        android:id="@+id/btnRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="83dp"
        android:layout_marginTop="10dp"
        android:text="@string/rating"
        android:backgroundTint="@color/button_color"/>

    <Button
        android:id="@+id/btnExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="83dp"
        android:layout_marginTop="140dp"
        android:text="@string/exit"
        android:backgroundTint="@color/button_color"/>


</LinearLayout>