<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentMenu"
    android:orientation="vertical"
    android:background="@color/game_background_color">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/game_navigation_bar_color"
            app:title="@string/app_name"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Display1"
            app:titleTextColor="@color/button_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="40dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/userIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_color"
                android:contentDescription="@string/settings"
                android:src="@drawable/ic_avatar_placeholder"
                app:tint="@color/white"  />
            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:layout_gravity="center"/>
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="180dp"
            android:backgroundTint="@color/button_color"
            android:contentDescription="@string/settings"
            android:src="@drawable/ic_settings"
            app:tint="@color/white"  />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/rating"
        android:textAppearance="@style/TextAppearance.Material3.DisplayLarge"
        android:textColor="@color/button_color"/>

    <ScrollView
        android:id="@+id/svRating"
        android:layout_marginTop="10dp"
        android:layout_width="320dp"
        android:layout_height="350dp"
        android:layout_gravity="center"
        android:background="@drawable/shape"
        android:backgroundTint="@color/white">
    </ScrollView>

    <Button
        android:id="@+id/btnQuitTheGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="83dp"
        android:layout_marginTop="20dp"
        android:text="@string/exit"
        style="?attr/materialButtonOutlinedStyle"/>

</LinearLayout>